First deployable version

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Rafael Vidaurre <narzerus@gmail.com>"
   ],
   "description": "Route permission and access control as simple as it can get",
-  "main": "module.js",
+  "main": "dist/permission.js",
   "keywords": [
     "angular",
     "permissions",
