Fix style differences and some non-space indentations

--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -29,6 +29,7 @@
     "afterEach": false,
     "expect": false,
     "spyOn": false,
-    "inject": false
+    "inject": false,
+    "jasmine": false
   }
 }
