Revert strigified test parameter

--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,6 @@
     "angular-mocks": "*"
   },
   "dependencies": {
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "0.2.11"
   }
 }
