--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "angular-permission",
+  "version": "0.2.0",
+  "description": "Route permission and access control as simple as it can get",
+  "keywords": [
+    "angular",
+    "permissions",
+    "roles",
+    "route"
+  ],
+  "author": "Rafael Vidaurre <narzerus@gmail.com>",
+  "license": "MIT",
+  "homepage": "http://www.rafaelvidaurre.com",
+  "repository": "https://github.com/Narzerus/angular-permission",
+  "bugs": "https://github.com/Narzerus/angular-permission/issues",
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
