feat: #18 - Source code minification

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "angular-permission",
   "version": "1.1.1",
   "authors": [
-    "Rafael Vidaurre <narzerus@gmail.com>"
+    "Rafael Vidaurre <narzerus@gmail.com>",
+    "Blazej Krysiak <blazej.krysiak@gmail.com>"
   ],
   "description": "Route permission and access control as simple as it can get",
   "main": "dist/angular-permission.js",
