--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "angular-permission",
   "version": "1.1.1",
-  "description": "Route permission and access control as simple as it can get",
-  "author": {
-    "name": "Rafael Vidaurre",
-    "email": "narzerus@gmail.com"
-  },
+  "description": "![alt tag](https://travis-ci.org/Narzerus/angular-permission.svg?branch=master)",
+  "author": "Rafael Vidaurre",
   "main": "dist/angular-permission.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Narzerus/angular-permission.git"
+    "url": "git+https://github.com/Narzerus/angular-permission.git"
   },
   "keywords": [
+    "permission",
     "angular",
-    "permissions",
-    "roles",
-    "route"
+    "routes",
+    "ui-router",
+    "access"
   ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Narzerus/angular-permission/issues"
   },
-  "homepage": "http://www.rafaelvidaurre.com",
+  "homepage": "https://github.com/Narzerus/angular-permission#readme",
   "peerDependencies": {
     "angular-ui-router": "^0.2.11"
   },
@@ -32,6 +30,7 @@
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-karma": "^0.8.3",
@@ -45,27 +44,7 @@
   "scripts": {
     "test": "grunt karma:unit"
   },
-  "name": "angular-permission",
-  "description": "![alt tag](https://travis-ci.org/Narzerus/angular-permission.svg?branch=master)",
-  "main": "dist/angular-permission.js",
   "directories": {
     "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Narzerus/angular-permission.git"
-  },
-  "keywords": [
-    "permission",
-    "angular",
-    "routes",
-    "ui-router",
-    "access"
-  ],
-  "author": "Rafael Vidaurre",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Narzerus/angular-permission/issues"
-  },
-  "homepage": "https://github.com/Narzerus/angular-permission#readme"
+  }
 }
