--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "angular-permission",
   "version": "1.1.1",
-  "authors": [
-    "Rafael Vidaurre <narzerus@gmail.com>",
-    "Blazej Krysiak <blazej.krysiak@gmail.com>"
-  ],
+  "authors": ["Rafael Vidaurre <narzerus@gmail.com>"],
+  "contributors": ["Blazej Krysiak <blazej.krysiak@gmail.com>"],
   "description": "Route permission and access control as simple as it can get",
   "main": "dist/angular-permission.js",
   "keywords": [
