Revert "feat: #18 - Source code minification"

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/Narzerus/angular-permission/issues"
   },
-  "homepage": "https://github.com/Narzerus/angular-permission",
+  "homepage": "http://www.rafaelvidaurre.com",
   "peerDependencies": {
     "angular-ui-router": "^0.2.11"
   },
@@ -32,7 +32,6 @@
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-karma": "^0.8.3",
@@ -51,5 +50,22 @@
   "main": "dist/angular-permission.js",
   "directories": {
     "test": "test"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Narzerus/angular-permission.git"
+  },
+  "keywords": [
+    "permission",
+    "angular",
+    "routes",
+    "ui-router",
+    "access"
+  ],
+  "author": "Rafael Vidaurre",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Narzerus/angular-permission/issues"
+  },
+  "homepage": "https://github.com/Narzerus/angular-permission#readme"
 }
