feat (permission.svc.js): #110 - Permission service refactor
Added mocha reporter for cleaner test results.
Refactored all the tests.
Updated jasmine to latest version.

BREAKING CHANGE:

Introduced methods:
- hasPermission
- getPermissions
- removePermission
- removeManyPermissions
- clearPermissions

--- a/.jshintrc
+++ b/.jshintrc
@@ -20,9 +20,9 @@
     "angular": false,
     "_": false,
     "it": false,
-    "xit": false,
+    "dit": false,
     "describe": false,
-    "xdescribe": false,
+    "ddescribe": false,
     "beforeEach": false,
     "afterEach": false,
     "expect": false,
