feature: #112 - Enable building library on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
+sudo: false
+cache:
+  directories:
+    - node_modules
+    - bower_components
 node_js:
   - 0.10
 before_install: npm install -g grunt-cli
