--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma": "^0.12.17",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-config": "^0.19.0"
+    "load-grunt-config": "^0.19.0",
+    "time-grunt": "^1.2.2"
   }
 }
