feature: #112 - Enable building library on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ cache:
     - bower_components
 node_js:
   - 4.2.3
-before_install: npm install -g grunt-cli
-install: npm install
+before_install:
+  - npm install -g grunt-cli
+install:
+  - npm install
 before_script:
   - npm install -g bower
   - bower install
+script:
   - grunt build
