--- a/.jshintrc
+++ b/.jshintrc
@@ -20,9 +20,9 @@
     "angular": false,
     "_": false,
     "it": false,
-    "dit": false,
+    "fit": false,
     "describe": false,
-    "ddescribe": false,
+    "fdescribe": false,
     "beforeEach": false,
     "afterEach": false,
     "expect": false,
