#134 #135 Solved problem with ui-router not displaying views. And many others as side effect.

--- a/bower.json
+++ b/bower.json
@@ -22,10 +22,10 @@
     "src"
   ],
   "devDependencies": {
-    "angular": "*",
-    "angular-mocks": "*"
+    "angular-mocks": "1.x"
   },
   "dependencies": {
-    "angular-ui-router": "~0.2.11"
+    "angular": "1.x",
+    "angular-ui-router": "0.2.x"
   }
 }
