--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-permission",
-  "version": "2.0.9",
+  "version": "2.1.0-beta",
   "description": "Route permission and access control as simple as it can get",
   "author": {
     "name": "Rafael Vidaurre",
