chore: Bump version to 2.1.0

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-permission",
-  "version": "2.1.0-beta",
+  "version": "2.1.0",
   "authors": ["Rafael Vidaurre <narzerus@gmail.com>"],
   "contributors": ["Blazej Krysiak <blazej.krysiak@gmail.com>"],
   "description": "Route permission and access control as simple as it can get",
