--- a/package.json
+++ b/package.json
@@ -33,22 +33,23 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-uglify": "^0.10.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.8.3",
-    "grunt-newer": "^0.7.0",
+    "grunt-karma": "^0.12.1",
+    "grunt-newer": "^1.1.2",
     "grunt-ng-annotate": "^1.0.1",
+    "jasmine-core": "^2.4.1",
     "jshint-stylish": "^2.1.0",
-    "karma": "^0.12.17",
+    "karma": "^0.13.21",
     "karma-jasmine": "^0.3.6",
     "karma-mocha-reporter": "^1.1.3",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-config": "^0.19.0",
-    "time-grunt": "^1.2.2"
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.4",
+    "load-grunt-config": "^0.19.0"
   }
 }
