--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/Narzerus/angular-permission",
   "peerDependencies": {
     "angular": "^1.4.0",
+    "angular-route": "^1.4.0",
     "angular-ui-router": "^0.2.11"
   },
   "devDependencies": {
