--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - npm install
 before_script:
 - npm install -g bower
-- bower install
+- bower install --force
 script:
 - grunt build
 deploy:
