--- a/bower.json
+++ b/bower.json
@@ -35,11 +35,11 @@
     ".travis.yml"
   ],
   "devDependencies": {
-    "angular-mocks": "^1.4.8",
-    "angular-route": "^1.4.8",
+    "angular-mocks": "*",
+    "angular-route": "<=1.5.3",
     "angular-ui-router": "^0.2.0"
   },
   "dependencies": {
-    "angular": "^1.4.8"
+    "angular": ">=1.4.8"
   }
 }
