--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "angular-permission",
-  "version": "2.3.6",
+  "version": "3.0.0-beta",
   "authors": [
     "Rafael Vidaurre <narzerus@gmail.com> (http://www.rafaelvidaurre.com)",
     "Blazej Krysiak <blazej.krysiak@gmail.com>"
   ],
-  "description": "Route permission and access control as simple as it can get",
+  "description": "Fully featured role and permission based access control for angular applications",
   "main": "dist/angular-permission.js",
   "keywords": [
     "angular",
