--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-permission",
-  "version": "2.3.6",
-  "description": "Route permission and access control as simple as it can get",
+  "version": "3.0.0-beta",
+  "description": "Fully featured role and permission based access control for angular applications",
   "author": {
 	"name": "Rafael Vidaurre",
 	"email": "narzerus@gmail.com",
