--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Rafael Vidaurre <narzerus@gmail.com> (http://www.rafaelvidaurre.com)",
     "Blazej Krysiak <blazej.krysiak@gmail.com>"
   ],
-  "description": "Fully featured role and permission based access control for angular applications",
+  "description": "Fully featured role and permission based access control for your angular applications",
   "main": "dist/angular-permission.js",
   "keywords": [
     "angular",
