updated the project, so each module exports the module name. Created a index.js which requires each of the modules and exports them. Updated the package.json to use the new index.js file instead of the main module

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	  "email": "blazej.krysiak@gmail.com"
 	}
   ],
-  "main": "dist/angular-permission.js",
+  "main": "index.js",
   "repository": {
 	"type": "git",
 	"url": "https://github.com/Narzerus/angular-permission.git"
