chore: Bump version to 3.1.0

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-permission",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "authors": [
 	"Rafael Vidaurre <narzerus@gmail.com> (http://www.rafaelvidaurre.com)",
 	"Blazej Krysiak <blazej.krysiak@gmail.com>"
@@ -35,6 +35,7 @@
 	"test",
 	"src",
 	"Gruntfile.js",
+	"CONTRIBUTING.md",
 	".jshintrc",
 	".gitignore",
 	".travis.yml"
