--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "peerDependencies": {
 	"angular": "^1.4.8",
-	"angular-ui-router": "^0.2.11"
+	"angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "devDependencies": {
 	"grunt": "^0.4.5",
