--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-permission",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "authors": [
 	"Rafael Vidaurre <narzerus@gmail.com> (http://www.rafaelvidaurre.com)",
 	"Blazej Krysiak <blazej.krysiak@gmail.com>"
@@ -42,8 +42,8 @@
   ],
   "devDependencies": {
 	"angular-mocks": "*",
-	"angular-route": "<=1.5.3",
-	"angular-ui-router": "^0.2.0"
+	"angular-route": "*",
+	"angular-ui-router": "<1.0.0"
   },
   "dependencies": {
 	"angular": ">=1.4.8"
