--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,7 @@
   ],
   "devDependencies": {
 	"angular-mocks": "*",
-	"angular-route": "*",
+	"angular-route": "<=1.5.3",
 	"angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "dependencies": {
