--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	"angular": ">=1.4.8"
   },
   "peerDependencies": {
-	"angular": "^1.4.8",
+	"angular-route": "<=1.5.3",
 	"angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "devDependencies": {
