--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
 	"angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "devDependencies": {
-	"grunt": "^0.4.5",
+	"grunt": "^1.0.0",
 	"grunt-contrib-clean": "^1.0.0",
 	"grunt-contrib-concat": "^1.0.0",
 	"grunt-contrib-connect": "^1.0.0",
 	"grunt-contrib-copy": "^1.0.0",
 	"grunt-contrib-jshint": "^1.0.0",
 	"grunt-contrib-uglify": "^1.0.0",
+	"grunt-jsbeautifier": "^0.2.12",
 	"grunt-karma": "^0.12.1",
 	"grunt-karma-coveralls": "^2.5.4",
 	"grunt-ng-annotate": "^1.0.1",
