--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-permission",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "authors": [
 	"Rafael Vidaurre <narzerus@gmail.com> (http://www.rafaelvidaurre.com)",
 	"Blazej Krysiak <blazej.krysiak@gmail.com>"
@@ -38,7 +38,7 @@
   ],
   "devDependencies": {
 	"angular-mocks": "*",
-	"angular-route": "<=1.5.3",
+	"angular-route": "*",
 	"angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "dependencies": {
