--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-permission",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "description": "Fully featured role and permission based access control for your angular applications",
   "author": {
 	"name": "Rafael Vidaurre",
@@ -40,7 +40,7 @@
 	"angular": ">=1.4.8"
   },
   "peerDependencies": {
-	"angular-route": "<=1.5.3",
+	"angular-route": ">=1.4.8",
 	"angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "devDependencies": {
