fix: Attempt to problem with tests on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ node_js:
 before_install:
 - npm install -g grunt-cli
 install:
-- npm install
+- npm update
 before_script:
 - npm install -g bower
 - bower install --force
