--- a/package.json
+++ b/package.json
@@ -3,66 +3,67 @@
   "version": "4.0.2",
   "description": "Fully featured role and permission based access control for your angular applications",
   "author": {
-	"name": "Rafael Vidaurre",
-	"email": "narzerus@gmail.com",
-	"url": "http://www.rafaelvidaurre.com"
+    "name": "Rafael Vidaurre",
+    "email": "narzerus@gmail.com",
+    "url": "http://www.rafaelvidaurre.com"
   },
   "contributors": [
-	{
-	  "name": "Blazej Krysiak",
-	  "email": "blazej.krysiak@gmail.com"
-	}
+    {
+      "name": "Blazej Krysiak",
+      "email": "blazej.krysiak@gmail.com"
+    }
   ],
   "main": "index.js",
   "repository": {
-	"type": "git",
-	"url": "https://github.com/Narzerus/angular-permission.git"
+    "type": "git",
+    "url": "https://github.com/Narzerus/angular-permission.git"
   },
   "keywords": [
-	"angular",
-	"ui-router",
-	"ng-route",
-	"angular-route",
-	"access-control",
-	"permissions",
-	"access",
-	"acl",
-	"rbac",
-	"roles",
-	"route"
+    "angular",
+    "ui-router",
+    "ng-route",
+    "angular-route",
+    "access-control",
+    "permissions",
+    "access",
+    "acl",
+    "rbac",
+    "roles",
+    "route"
   ],
   "license": "MIT",
   "bugs": {
-	"url": "https://github.com/Narzerus/angular-permission/issues"
+    "url": "https://github.com/Narzerus/angular-permission/issues"
   },
   "homepage": "https://github.com/Narzerus/angular-permission",
   "dependencies": {
-	"angular": ">=1.4.8"
+    "angular": ">=1.4.8"
   },
   "peerDependencies": {
-	"angular-route": ">=1.4.8",
-	"angular-ui-router": "^0.2.11 || ^0.3.0"
+    "angular-route": ">=1.4.8",
+    "angular-ui-router": "^0.2.11 || ^0.3.0"
   },
   "devDependencies": {
-	"grunt": "^1.0.0",
-	"grunt-contrib-clean": "^1.0.0",
-	"grunt-contrib-concat": "^1.0.0",
-	"grunt-contrib-connect": "^1.0.0",
-	"grunt-contrib-copy": "^1.0.0",
-	"grunt-contrib-jshint": "^1.0.0",
-	"grunt-contrib-uglify": "^1.0.0",
-	"grunt-jsbeautifier": "^0.2.12",
-	"grunt-karma": "^1.0.0",
-	"grunt-karma-coveralls": "^2.5.4",
-	"grunt-ng-annotate": "^1.0.1",
-	"jasmine-core": "^2.4.1",
-	"jasmine-promise-matchers": "^2.0.2",
-	"jshint-stylish": "^2.1.0",
-	"karma": "^1.1.0",
-	"karma-jasmine": "^1.0.2",
-	"karma-mocha-reporter": "^1.1.3",
-	"karma-phantomjs-launcher": "^1.0.1",
-	"load-grunt-config": "^0.19.0",
-	"phantomjs-prebuilt": "^2.1.7"
+    "grunt": "^1.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.12",
+    "grunt-karma": "^1.0.0",
+    "grunt-karma-coveralls": "^2.5.4",
+    "grunt-ng-annotate": "^1.0.1",
+    "jasmine-core": "^2.4.1",
+    "jasmine-promise-matchers": "^2.0.2",
+    "jshint-stylish": "^2.1.0",
+    "karma": "^1.1.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^1.1.3",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "load-grunt-config": "^0.19.0",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7"
   }
 }
