--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "karma-mocha-reporter": "^1.1.3",
     "karma-phantomjs-launcher": "^1.0.1",
     "load-grunt-config": "^0.19.0",
-    "phantomjs-prebuilt": "2.1.10"
+    "phantomjs-prebuilt": "^2.1.10"
   }
 }
