--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "grunt-karma": "^1.0.0",
     "grunt-karma-coveralls": "^2.5.4",
     "grunt-ng-annotate": "^1.0.1",
+    "grunt-protractor-runner": "^3.2.0",
     "jasmine-core": "^2.4.1",
     "jasmine-promise-matchers": "^2.0.2",
     "jshint-stylish": "^2.1.0",
