--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "grunt-protractor-runner": "^3.2.0",
     "jasmine-core": "^2.4.1",
     "jasmine-promise-matchers": "^2.0.2",
+    "jasmine-spec-reporter": "^2.7.0",
     "jshint-stylish": "^2.1.0",
     "karma": "^1.1.0",
     "karma-jasmine": "^1.0.2",
