--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,7 @@
   "devDependencies": {
 	"angular-mocks": "*",
 	"angular-route": "*",
-	"angular-ui-router": "<1.0.0"
+	  "angular-ui-router": "*"
   },
   "dependencies": {
 	"angular": ">=1.4.8"
