--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "peerDependencies": {
     "angular-route": ">=1.4.8",
-    "angular-ui-router": "<1.0.0"
+    "angular-ui-router": "*"
   },
   "devDependencies": {
     "grunt": "^1.0.0",
@@ -61,6 +61,7 @@
     "jasmine-spec-reporter": "^2.7.0",
     "jshint-stylish": "^2.1.0",
     "karma": "^1.1.0",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^1.1.3",
     "karma-phantomjs-launcher": "^1.0.1",
